TODO: Testing, testing ..

V RF.01.37x.Mod (2017-11-07)
- AtlonXPs Digit Flow compensation got a special menu (Values are not stored within EEPROM! Do this with G-Code because this feature is only for special parts)
- Notfall Pause / Emergency Pause got a prettier menu style
- Notfall Z-Stop / Emergency Z-Stop got a prettier menu style
- replaced y-axis with lengthMM[Y_AXIS] on some points

V RF.01.37w9.Mod (2017-11-03)
- removed Timo-Watchdog-Bug by limiting MoveZ to 5mm while Scan ABS/Scan PLA
- removed PID autotune methods P, PI, PD because they are unnecessary. We found perfectly suitable methods for hotends and heated bed in 1.37w8.
- some cleanup and updates in README.MD
- completely removed DEBUG_SHOW_DEVELOPMENT_LOGS for cleanup because those msgs are not necessary anymore.
- excluded some debug routines from compilation.

V RF.01.37w8.Mod (2017-10-30)
- Included PID autotune method Tyreus-Lyben (Hinweis/Anstoß von hal4822) -> possible best method for PID autotuning 220V Heated Bed
- fixed readme

V RF.01.37w7.Mod (2017-10-30)
- Fix GT-2 (Sensor 8 / E3D) Temptable 222 -> 244

V RF.01.37w6.Mod (2017-10-29)
- PeterKa PID Temperatur tuning (Result of EXTRx_PID_IDRIVE_MIN discussion http://www.rf1000.de/viewtopic.php?f=23&t=2054)

V RF.01.37w5.Mod (2017-10-27)
- fix for Case Fan ON-ON-Off-exploit
- fix for possibility to disable X45 auto management through temperaturesetting (Off for now: M3121 / Always off: M3121 P1 / On: M3120)

V RF.01.37w4.Mod (2017-10-26)
- autofix 40-40 PID bug from 1.37- original firmware when reading pid-I-drive-min = 40 and pid-I-drive-max = 40 in eeprom

V RF.01.37w3.Mod (2017-10-26)
- fix: do not "correct" timing for extrusion moves without x,y,z. This let SensibleViscosity Feature fail since 1.37s3 and later. 
- upgrade and cleanup of sensible viscosity feature: It now saves new files to SD for every extrusion test you do
- removed some text and garbage functions to save eeprom space

V RF.01.37w2.Mod (2017-10-22)