@@ -6,6 +6,7 @@ V RF.01.37x.Mod (2017-11-07)
 - Notfall Pause / Emergency Pause got a prettier menu style
 - Notfall Z-Stop / Emergency Z-Stop got a prettier menu style
 - replaced y-axis with lengthMM[Y_AXIS] on some points
+- Repetiers fix for https://github.com/repetier/Repetier-Firmware/issues/709 -> https://github.com/repetier/Repetier-Firmware/commit/e76875ec2d04bd0dbfdd9a157270ee03f4731d5f
 
 V RF.01.37w9.Mod (2017-11-03)
 - removed Timo-Watchdog-Bug by limiting MoveZ to 5mm while Scan ABS/Scan PLA
